--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
             Known for friendly locals, beautiful beaches, and relaxed travel pace.
             Great for students looking for nature, island hopping, and value-for-money trips.
           </p>
-          <a class="btn" href="https://lowwayjiajimmy.github.io/c240-CA_Philippines/" target="_blank">Open Site →</a>
+         <a class="btn" href="https://lowwayjiajimmy.github.io/c240-CA_Philippines/" target="_blank" rel="noopener">
+  Open Site →
+</a>
+
         </div>
       </article>
 
